@@ -224,26 +224,6 @@ public class AdmissionDaoImpl extends AbstractDaoImpl<Admission> implements Admi
         return rs;
     }
 
-    @Override
-    public List<Admission> getServiceAndBedProgramAdmissions(Integer demographicNo, Integer facilityId) {
-        if (demographicNo == null || demographicNo <= 0) {
-            throw new IllegalArgumentException();
-        }
-
-        String queryStr = "select a FROM Admission a , Program p WHERE (a.programType='Bed' or a.programType='Service') and a.clientId=?1 and a.programId=p.id and p.functionalCentreId is not null and p.functionalCentreId!='' and (p.facilityId=?2 or p.facilityId is null) ORDER BY a.admissionDate DESC";
-
-        Query query = entityManager.createQuery(queryStr);
-        query.setParameter(1, demographicNo);
-        query.setParameter(2, facilityId);
-        @SuppressWarnings("unchecked")
-        List<Admission> rs = query.getResultList();
-        if (log.isDebugEnabled()) {
-            log.debug("getServiceAndBedProgramAdmissions for clientId " + demographicNo + ", # of admissions: "
-                    + rs.size());
-        }
-
-        return rs;
-    }
 
     @Override
     public List<Admission> getAdmissionsByProgramAndClient(Integer demographicNo, Integer programId) {
@@ -452,42 +432,6 @@ public class AdmissionDaoImpl extends AbstractDaoImpl<Admission> implements Admi
     // TODO: rewrite
     @SuppressWarnings("unchecked")
     @Override
-    public Admission getCurrentBedProgramAdmission(ProgramDao programDAO, Integer demographicNo) {
-        if (programDAO == null) {
-            throw new IllegalArgumentException();
-        }
-
-        if (demographicNo == null || demographicNo <= 0) {
-            throw new IllegalArgumentException();
-        }
-
-        String queryStr = "select a FROM Admission a WHERE a.clientId=?1 AND a.admissionStatus='current' ORDER BY a.admissionDate DESC";
-        Query query = entityManager.createQuery(queryStr);
-        query.setParameter(1, demographicNo);
-        Admission admission = null;
-        List<Admission> rs = query.getResultList();
-
-        if (rs.isEmpty()) {
-            return null;
-        }
-
-        ListIterator<Admission> listIterator = rs.listIterator();
-        while (listIterator.hasNext()) {
-            try {
-                admission = listIterator.next();
-                if (programDAO.isBedProgram(admission.getProgramId())) {
-                    return admission;
-                }
-            } catch (Exception ex) {
-                return null;
-            }
-        }
-        return null;
-    }
-
-    // TODO: rewrite
-    @SuppressWarnings("unchecked")
-    @Override
     public List<Admission> getCurrentServiceProgramAdmission(ProgramDao programDAO, Integer demographicNo) {
         if (programDAO == null) {
             throw new IllegalArgumentException();
@@ -579,7 +523,7 @@ public class AdmissionDaoImpl extends AbstractDaoImpl<Admission> implements Admi
 
     @Override
     public Admission getAdmission(int id) {
-        return (getAdmission(new Long(id)));
+        return (getAdmission(Long.valueOf(id)));
     }
 
     @Override
