@@ -205,7 +205,7 @@ public final class Login2Action extends ActionSupport {
 
                 // Error Handling
                 if (errorStr != null && !errorStr.isEmpty()) {
-                    String newURL = "/forcepasswordreset.jsp";
+                    String newURL = request.getContextPath() + "/forcepasswordreset.jsp";
                     newURL = newURL + errorStr;
                     response.sendRedirect(newURL);
                     return NONE;
@@ -344,7 +344,7 @@ public final class Login2Action extends ActionSupport {
                     security.isForcePasswordReset() != null && security.isForcePasswordReset()
                     && forcedpasswordchange) {
 
-                String newURL = "/forcepasswordreset.jsp";
+                String newURL = request.getContextPath() + "/forcepasswordreset.jsp";
 
                 try {
                     setUserInfoToSession(request, userName, password, pin, nextPage);
@@ -527,7 +527,7 @@ public final class Login2Action extends ActionSupport {
             if (pvar.getProperty("billregion").equals("BC")) {
                 String alertFreq = pvar.getProperty("ALERT_POLL_FREQUENCY");
                 if (alertFreq != null) {
-                    Long longFreq = new Long(alertFreq);
+                    Long longFreq = Long.valueOf(alertFreq);
                     String[] alertCodes = OscarProperties.getInstance().getProperty("CDM_ALERTS").split(",");
                     AlertTimer.getInstance(alertCodes, longFreq.longValue());
                 }
@@ -541,10 +541,6 @@ public final class Login2Action extends ActionSupport {
             LoggedInInfo loggedInInfo = LoggedInUserFilter.generateLoggedInInfoFromSession(request);
 
             if (where.equals("provider")) {
-                UserProperty drugrefProperty = propDao.getProp(UserProperty.MYDRUGREF_ID);
-                if (drugrefProperty != null || appManager.isK2AUser(loggedInInfo)) {
-                    dsService.fetchGuidelinesFromServiceInBackground(loggedInInfo);
-                }
             }
 
             List<Integer> facilityIds = providerDao.getFacilityIds(provider.getProviderNo());
