@@ -220,7 +220,7 @@ public class EctConsultationFormFax2Action extends ActionSupport {
         }
         if (!error.equals("")) {
             logger.error(error + " occured insided ConsultationPrintAction", exception);
-            request.setAttribute("printError", new Boolean(true));
+            request.setAttribute("printError", Boolean.valueOf(true));
             return "error";
         }
         return null;
